--- a/templates/main_page.html
+++ b/templates/main_page.html
@@ -45,6 +45,10 @@
           <button type="submit" class="btn btn-primary">Hinzufügen</button>
         </form>
       </div>
+<a href="/dbexplorer" class="btn">
+  Datenbank öffnen
+</a>
+
 {% endblock %}
 
       
