--- a/templates/main_page.html
+++ b/templates/main_page.html
@@ -1,55 +1,57 @@
 {% extends "base.html" %}
 
 {% block content %}
-    <ul class="todo-list">
-          {% for todo in todos %}
-            <li class="todo-item">
-              <form action="/complete" method="POST" class="todo-complete-form">
 
-                <input type="hidden" name="id" value="{{ todo.id }}">
+{% if false %}
+<ul class="todo-list">
+      {% for todo in todos %}
+        <li class="todo-item">
+          <form action="/complete" method="POST" class="todo-complete-form">
 
-                <!-- Checkbox triggert Submit -->
-                <input
-                  type="checkbox"
-                  class="todo-checkbox"
-                  id="todo-{{ todo.id }}"
-                  name="complete"
-                  value="1"
-                  onchange="this.form.submit()">
+            <input type="hidden" name="id" value="{{ todo.id }}">
 
-                <label for="todo-{{ todo.id }}" class="todo-content">
-                  {{ todo.content }}
-                  <span class="todo-date">📅 {{ todo.due.strftime('%d.%m.%Y %H:%M') }}</span>
-                </label>
-              </form>
-            </li>
-          {% else %}
-            <div>Nichts zu tun🎉</div>
-          {% endfor %}
-        </ul>
+            <input
+              type="checkbox"
+              class="todo-checkbox"
+              id="todo-{{ todo.id }}"
+              name="complete"
+              value="1"
+              onchange="this.form.submit()">
 
-      <div class="todo-form">
-        <form action="." method="POST">
-          <div class="form-group">
-            <label for="contents">TODO</label>
-            <input type="text" id="contents" name="contents" class="form-control"
-              placeholder="Neues TODO eingeben…" required />
-          </div>
+            <label for="todo-{{ todo.id }}" class="todo-content">
+              {{ todo.content }}
+              <span class="todo-date">📅 {{ todo.due.strftime('%d.%m.%Y %H:%M') }}</span>
+            </label>
+          </form>
+        </li>
+      {% else %}
+        <div>Nichts zu tun🎉</div>
+      {% endfor %}
+    </ul>
 
-          <div class="form-group">
-            <label for="due_at">Fällig am</label>
-            <input id="due_at" name="due_at" type="datetime-local" class="form-control" required>
-            <p class="help-block">Wähle Datum & Uhrzeit (z. B. 07.11.2025 14:30).</p>
-          </div>
-
-          <button type="submit" class="btn btn-primary">Hinzufügen</button>
-        </form>
+  <div class="todo-form">
+    <form action="." method="POST">
+      <div class="form-group">
+        <label for="contents">TODO</label>
+        <input type="text" id="contents" name="contents" class="form-control"
+          placeholder="Neues TODO eingeben…" required />
       </div>
-<a href="/dbexplorer" class="btn">
+
+      <div class="form-group">
+        <label for="due_at">Fällig am</label>
+        <input id="due_at" name="due_at" type="datetime-local" class="form-control" required>
+        <p class="help-block">Wähle Datum & Uhrzeit (z. B. 07.11.2025 14:30).</p>
+      </div>
+
+      <button type="submit" class="btn btn-primary">Hinzufügen</button>
+    </form>
+  </div>
+{% endif %}
+
+<a href="/dbexplorer" class="btn btn-secondary">
   Datenbank öffnen
 </a>
 
 {% endblock %}
-
 
       
