--- a/templates/dbexplorer.html
+++ b/templates/dbexplorer.html
@@ -226,13 +226,12 @@
 <body>
     <div class="container">
         <div class="header">
-            <h1>🔍 Database Explorer</h1>
-            <p>Interaktive Datenbank-Ansicht</p>
+            <h1>Krankenhaus Datenbank</h1>
+            <p>Interaktive Datenansicht</p>
         </div>
         
         <div class="nav-links">
             <a href="/">← Zurück zur Startseite</a>
-            <a href="/users">Benutzer</a>
             <a href="/db_viz">DB Visualisierung</a>
         </div>
         
