--- a/templates/dbexplorer.html
+++ b/templates/dbexplorer.html
@@ -233,6 +233,7 @@
         <div class="nav-links">
             <a href="/">← Zurück zur Startseite</a>
             <a href="/db_viz">DB Visualisierung</a>
+            <a href="/patient/new">➕ Patient erfassen</a>
         </div>
         
         <div class="controls">
