--- a/templates/dbexplorer.html
+++ b/templates/dbexplorer.html
@@ -234,6 +234,7 @@
             <a href="/">← Zurück zur Startseite</a>
             <a href="/db_viz">DB Visualisierung</a>
             <a href="/patient/new">➕ Patient erfassen</a>
+            <a href="/arzt/new">➕ Arzt erfassen</a>
         </div>
         
         <div class="controls">
