--- a/templates/dbexplorer.html
+++ b/templates/dbexplorer.html
@@ -235,6 +235,7 @@
             <a href="/db_viz">DB Visualisierung</a>
             <a href="/patient/new">➕ Patient erfassen</a>
             <a href="/arzt/new">➕ Arzt erfassen</a>
+            <a href="/aufenthalt/new">➕ Aufenthalt erfassen</a>
         </div>
         
         <div class="controls">
