--- a/templates/dbexplorer.html
+++ b/templates/dbexplorer.html
@@ -236,6 +236,7 @@
             <a href="/patient/new">➕ Patient erfassen</a>
             <a href="/arzt/new">➕ Arzt erfassen</a>
             <a href="/aufenthalt/new">➕ Aufenthalt erfassen</a>
+            <a href="/nimmt/new">➕ Medikament zu Patient</a>
         </div>
         
         <div class="controls">
