--- a/templates/dbexplorer.html
+++ b/templates/dbexplorer.html
@@ -237,7 +237,7 @@
             <a href="/arzt/new">➕ Arzt erfassen</a>
             <a href="/aufenthalt/new">➕ Aufenthalt erfassen</a>
             <a href="/medizin/new">➕ Medikament erfassen</a>
-            <a href="/nimmt/new">➕ Medikament zu Patient</a>
+            <a href="/nimmt/new">➕ nimmt</a>
         </div>
         
         <div class="controls">
