--- a/templates/dbexplorer.html
+++ b/templates/dbexplorer.html
@@ -234,10 +234,11 @@
             <a href="/">← Zurück zur Startseite</a>
             <a href="/db_viz">DB Visualisierung</a>
             <a href="/patient/new">➕ Patient erfassen</a>
+            <a href="/medizin/new">➕ Medikament erfassen</a>
             <a href="/arzt/new">➕ Arzt erfassen</a>
             <a href="/aufenthalt/new">➕ Aufenthalt erfassen</a>
-            <a href="/medizin/new">➕ Medikament erfassen</a>
             <a href="/nimmt/new">➕ nimmt</a>
+            <a href="/behandelt/new">➕ behandelt</a>
         </div>
         
         <div class="controls">
