--- a/templates/dbexplorer.html
+++ b/templates/dbexplorer.html
@@ -233,6 +233,7 @@
         <div class="nav-links">
             <a href="/db_viz">DB Visualisierung</a>
             <a href="/patient">Patienten</a>
+            <a href="/arzt">Ärzte</a>
             <a href="/patient/new">Patient erfassen</a>
             <a href="/medizin/new">Medikament erfassen</a>
             <a href="/arzt/new">Arzt erfassen</a>
