--- a/templates/dbexplorer.html
+++ b/templates/dbexplorer.html
@@ -233,13 +233,11 @@
         <div class="nav-links">
             <a href="/db_viz">DB Visualisierung</a>
             <a href="/patient">Patienten</a>
+            <a href="/medizin">Medikamente</a></li>
             <a href="/arzt">Ärzte</a>
-            <a href="/patient/new">Patient erfassen</a>
-            <a href="/medizin/new">Medikament erfassen</a>
-            <a href="/arzt/new">Arzt erfassen</a>
+            <a href="/nimmt">Nimmt</a></li>
+            <a href="/behandelt">Behandelt</a></li>
             <a href="/aufenthalt/new">Aufenthalt erfassen</a>
-            <a href="/nimmt/new">nimmt</a>
-            <a href="/behandelt/new">behandelt</a>
         </div>
         
         <div class="controls">
