--- a/templates/dbexplorer.html
+++ b/templates/dbexplorer.html
@@ -235,9 +235,9 @@
             <a href="/patient">Patienten</a>
             <a href="/medizin">Medikamente</a></li>
             <a href="/arzt">Ärzte</a>
+            <a href="/aufenthalt">Aufenthalte</a></li>
             <a href="/nimmt">Nimmt</a></li>
             <a href="/behandelt">Behandelt</a></li>
-            <a href="/aufenthalt/new">Aufenthalt erfassen</a>
         </div>
         
         <div class="controls">
